# archer

./: .env.template  README.md  pyproject.toml
.github/workflows/: ci.yml  post-attendance.yml
src/archer/: config.py  discord_client.py
src/archer/models/: embed.py  training.py
src/archer/scripts/: post_attendance.py
tests/unit/: test_discord_client.py  test_main.py
tests/unit/scripts/: test_post_attendance.py
tests/unit/test_utils/: test_hello.py
